llvm/src/snapshots/transmute_llvm__tests__array_write_access_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@layout_a1n = global [3 x i64] [i64 1, i64 1, i64 0]

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  %"a#local#sym20#" = alloca ptr, align 8
  store ptr null, ptr %"a#local#sym20#", align 8
  call void @llvm.gcroot(ptr %"a#local#sym20#", ptr @layout_a1n)
  %"heap#array#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr ([1 x i64], ptr null, i32 1) to i64))
  %"heap#array#1" = load [1 x i64], ptr %"heap#array#", align 4
  %"heap#array#[0]#" = insertvalue [1 x i64] %"heap#array#1", i64 0, 0
  store [1 x i64] %"heap#array#[0]#", ptr %"heap#array#", align 4
  store ptr %"heap#array#", ptr %"a#local#sym20#", align 8
  call void @gc_run()
  %"a#local#sym20#2" = load ptr, ptr %"a#local#sym20#", align 8
  %"array[?]#" = getelementptr [1 x i64], ptr %"a#local#sym20#2", i64 0, i64 0
  store i64 1, ptr %"array[?]#", align 4
  call void @gc_run()
  ret void
}

attributes #0 = { nounwind }
