llvm/src/snapshots/transmute_llvm__tests__assign_local.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i64 @f(i64 %"n#sym19#") {
entry:
  %"m#local#sym20#" = alloca i64, align 8
  %"n#local#sym19#" = alloca i64, align 8
  store i64 %"n#sym19#", ptr %"n#local#sym19#", align 4
  %"n#local#sym19#1" = load i64, ptr %"n#local#sym19#", align 4
  store i64 %"n#local#sym19#1", ptr %"m#local#sym20#", align 4
  %"m#local#sym20#2" = load i64, ptr %"m#local#sym20#", align 4
  %"add#" = add i64 %"m#local#sym20#2", 1
  store i64 %"add#", ptr %"m#local#sym20#", align 4
  %"m#local#sym20#3" = load i64, ptr %"m#local#sym20#", align 4
  ret i64 %"m#local#sym20#3"
}
