llvm/src/snapshots/transmute_llvm__tests__deeply_nested_function_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  ret void
}

define void @_TM0_N1f01g0() gc "shadow-stack" {
entry:
  ret void
}

define void @_TM0_NN1f01g01h0() gc "shadow-stack" {
entry:
  ret void
}

attributes #0 = { nounwind }
